--- a/mobile/android/app/src/main/res/layout/fragment_login.xml
+++ b/mobile/android/app/src/main/res/layout/fragment_login.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0C0C0D"
+    android:gravity="center"
     android:orientation="vertical">
 
     <EditText
@@ -10,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="100dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/background_edit_text"
         android:hint="@string/username"
@@ -41,7 +41,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginBottom="20dp"
         android:background="@drawable/background_button"
         android:gravity="center"
         android:padding="12dp"
