--- a/mobile/android/app/src/main/res/layout/fragment_onboarding.xml
+++ b/mobile/android/app/src/main/res/layout/fragment_onboarding.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0C0C0D"
+    android:gravity="center"
     android:orientation="vertical">
 
     <TextView
@@ -13,7 +14,6 @@
         android:layout_marginBottom="20dp"
         android:background="@drawable/background_button"
         android:gravity="center"
-        android:layout_marginTop="100dp"
         android:padding="12dp"
         android:text="@string/register"
         android:textColor="@color/white"
@@ -24,7 +24,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginBottom="100dp"
         android:background="@drawable/background_button"
         android:gravity="center"
         android:padding="12dp"
