--- a/mobile/android/app/src/main/res/layout/fragment_registration.xml
+++ b/mobile/android/app/src/main/res/layout/fragment_registration.xml
@@ -1,63 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="#0C0C0D"
+    android:gravity="center"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/dialog_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/new_post"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        android:textStyle="bold" />
-
     <EditText
-        android:id="@+id/title_edit_text"
+        android:id="@+id/email_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="32dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/background_edit_text"
-        android:hint="@string/title"
+        android:hint="@string/email"
         android:importantForAutofill="no"
-        android:inputType="textCapSentences"
+        android:inputType="textEmailAddress"
+        android:padding="12dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/color_white_50"
+        android:textSize="18sp" />
+
+
+    <EditText
+        android:id="@+id/username_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/background_edit_text"
+        android:hint="@string/username"
+        android:importantForAutofill="no"
+        android:inputType="text"
         android:padding="12dp"
         android:textColor="@color/white"
         android:textColorHint="@color/color_white_50"
         android:textSize="18sp" />
 
     <EditText
-        android:id="@+id/content_edit_text"
+        android:id="@+id/password_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
+        android:layout_marginHorizontal="32dp"
         android:layout_marginBottom="50dp"
         android:background="@drawable/background_edit_text"
-        android:gravity="start"
-        android:hint="@string/content"
+        android:hint="@string/password"
         android:importantForAutofill="no"
-        android:inputType="textMultiLine|textCapSentences"
-        android:minLines="3"
+        android:inputType="textPassword"
         android:padding="12dp"
         android:textColor="@color/white"
         android:textColorHint="@color/color_white_50"
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/add_post_button"
-        android:layout_width="wrap_content"
+        android:id="@+id/register_button"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="20dp"
+        android:layout_marginHorizontal="32dp"
         android:background="@drawable/background_button"
-        android:paddingHorizontal="32dp"
-        android:paddingVertical="12dp"
-        android:text="@string/add_new_post"
+        android:gravity="center"
+        android:padding="12dp"
+        android:text="@string/register"
         android:textColor="@color/white"
         android:textSize="18sp" />
 
